--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "Clock",
-  "description": "Simple Css and js Clock",
+  "name": "digital Clock",
+  "description": "Simple Css and js Clock with background image",
   "version": "0.1",
   "permissions": [
     "activeTab"
